# codex-dotfiles

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  MASTER_AGENTS.md  config.toml  pyproject.toml
.codex/: PRODUCTPLAN.md
.codex/docs/: using-node.md  using-python.md  using-react.md  using-rust.md  using-tdd.md  using-typescript.md
.codex/product-plan/: plan-meta.yaml
.codex/product-plan/foundation/: brainstorm.yaml  metrics.yaml  (+6 more)
.codex/prompts/: add-codex-git-ops-submodule.md  adhoc-test-results.md  codex-prompt-sync.md  create-detailed-checklist.md  execute-next-task.md  git-update.md  init-part-2.md  plan-to-checklist.md  process.md  product-plan-brainstorm.md  product-plan-development-considerations.md  product-plan-epics.md  product-plan-features.md  product-plan-metrics.md  product-plan-personas.md  product-plan-prd.md  product-plan-roadmap.md  product-plan-strategy.md  product-plan-user-stories.md  product-plan-vision.md  re-init.md  review-checklist.md  scratchpad-review-and-cleanup.md  serena-init.md  session-end.md  session-prime.md  session-snapshot.md  session-start.md  skunkworx-epics.md  skunkworx-features.md  skunkworx-user-stories.md  start.md  update-checklist.md
.codex/schemas/: brainstorm-summary.schema.json
.codex/scripts/: add-codex-git-ops-submodule.sh  capture-raw-prompt.sh  initiative-scaffold.sh  install.sh  prompts-sync.sh  sync-prompts.sh  validate_brainstorm.py
.serena/: project.yml
.serena/memories/: codebase_structure.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
(+132 files in other folders)
