[project]
name = "codex-git-ops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "mypy>=1.18.2",
    "pip-audit>=2.9.0",
    "pre-commit>=4.3.0",
    "ruff>=0.13.1",
    "types-PyYAML>=6.0.12",
]

[tool.ruff]
# Neutral: only help with version inference.
target-version = "py312"

[tool.mypy]
# Neutral: only declare Python version + ignore missing imports for low friction.
python_version = "3.12"
ignore_missing_imports = true
